# 3dfileconverter

./: .travis.yml  3dfileconverter.code-workspace  README.md  prepare_cmake.sh
input/: untitled.stl
src/: .travis.yml  CMakeLists.txt  main.cpp
src/converter/: CMakeLists.txt  main.cpp
src/lib/: CMakeLists.txt  FileReader.cpp  FileWriter.cpp  OBJParser.cpp  STLParser.cpp  lib.cpp
src/lib/include/: Face.h  FileHandlerBase.h  FileReader.h  FileType.h  FileWriter.h  Material.h  OBJParser.h  Parser.h  STLParser.h  Triangle.h  Vector.h  Vertex.h  lib.h
src/test/: CMakeLists.txt  ConversationTests.cpp  OBJParserTest.cpp  ParserTest.cpp  STLParserTest.cpp  test.cpp
